--- a/terraform/envs/k8splay/cloud_config.yml
+++ b/terraform/envs/k8splay/cloud_config.yml
@@ -6,13 +6,15 @@ packages:
 write_files:
   - owner: root
     path: /srv/minion
-    content: ${minion_config}
+    content: "k3d_password: ${k3d_password}"
 runcmd:
-  - cd /tmp
+  - cd /srv
   - git clone https://github.com/devnullroots/k3d_playground.git
-  - cp -r /tmp/k3d_playground/infra/salt /srv/salt
+  - cp -r /srv/k3d_playground/infra/salt /srv/salt
+  - mkdir /srv/jupyter
+  - cp /srv/k3d_playground/notebooks /srv/jupyter/notebooks
   - curl -o bootstrap-salt.sh -L https://bootstrap.saltproject.io
   - sh bootstrap-salt.sh 
-  - cp /srv/minion /etc/salt/minion
+  - cp /srv/k3d_playground/terraform/envs/k8splay/k3d_azure.yml /etc/salt/minion
   - systemctl restart salt-minion
   - salt-call state.highstate
